[gd_scene load_steps=7 format=3 uid="uid://bcnpnplhpud5y"]

[ext_resource type="Script" path="res://ui/turn_display/_behavior/turn_portrait.gd" id="1_egx1p"]
[ext_resource type="Texture2D" uid="uid://bnaof4rcviqee" path="res://entity/character/ally/_sprite/turn_portrait_small.png" id="2_wjbv8"]
[ext_resource type="Texture2D" uid="uid://ck7ju73ierpxf" path="res://entity/character/ally/_sprite/turn_portrait_full_ally_1.png" id="3_4o6fg"]

[sub_resource type="Animation" id="Animation_66erf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../FullPortrait:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_v1sgi"]
resource_name = "turn_start"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../FullPortrait:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4qkdn"]
_data = {
"RESET": SubResource("Animation_66erf"),
"turn_start": SubResource("Animation_v1sgi")
}

[node name="TurnPortrait" type="Control"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_egx1p")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../SmallPortrait")
libraries = {
"": SubResource("AnimationLibrary_4qkdn")
}

[node name="SmallPortrait" type="Sprite2D" parent="."]
position = Vector2(8, 8)
texture = ExtResource("2_wjbv8")
hframes = 4

[node name="FullPortrait" type="Sprite2D" parent="."]
texture = ExtResource("3_4o6fg")
centered = false
hframes = 7
